# cellulite

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
assets/: france-shops.json.gz.REMOVED.git-id
assets/cadastre/: adresses-cadastre-01.geojson.gz.REMOVED.git-id  adresses-cadastre-02.geojson.gz.REMOVED.git-id  adresses-cadastre-03.geojson.gz.REMOVED.git-id  adresses-cadastre-04.geojson.gz.REMOVED.git-id  adresses-cadastre-05.geojson.gz.REMOVED.git-id  adresses-cadastre-06.geojson.gz.REMOVED.git-id  adresses-cadastre-07.geojson.gz.REMOVED.git-id  adresses-cadastre-08.geojson.gz.REMOVED.git-id  adresses-cadastre-09.geojson.gz.REMOVED.git-id  adresses-cadastre-10.geojson.gz.REMOVED.git-id  adresses-cadastre-11.geojson.gz.REMOVED.git-id  adresses-cadastre-12.geojson.gz.REMOVED.git-id  adresses-cadastre-13.geojson.gz.REMOVED.git-id  adresses-cadastre-14.geojson.gz.REMOVED.git-id  adresses-cadastre-15.geojson.gz.REMOVED.git-id  adresses-cadastre-16.geojson.gz.REMOVED.git-id  adresses-cadastre-17.geojson.gz.REMOVED.git-id  adresses-cadastre-18.geojson.gz.REMOVED.git-id  adresses-cadastre-19.geojson.gz.REMOVED.git-id  adresses-cadastre-21.geojson.gz.REMOVED.git-id  adresses-cadastre-22.geojson.gz.REMOVED.git-id  adresses-cadastre-23.geojson.gz.REMOVED.git-id  adresses-cadastre-24.geojson.gz.REMOVED.git-id  adresses-cadastre-25.geojson.gz.REMOVED.git-id  adresses-cadastre-26.geojson.gz.REMOVED.git-id  adresses-cadastre-27.geojson.gz.REMOVED.git-id  adresses-cadastre-28.geojson.gz.REMOVED.git-id  adresses-cadastre-29.geojson.gz.REMOVED.git-id  adresses-cadastre-30.geojson.gz.REMOVED.git-id  adresses-cadastre-31.geojson.gz.REMOVED.git-id  adresses-cadastre-32.geojson.gz.REMOVED.git-id  adresses-cadastre-33.geojson.gz.REMOVED.git-id  adresses-cadastre-34.geojson.gz.REMOVED.git-id  adresses-cadastre-35.geojson.gz.REMOVED.git-id  adresses-cadastre-36.geojson.gz.REMOVED.git-id  adresses-cadastre-37.geojson.gz.REMOVED.git-id  adresses-cadastre-38.geojson.gz.REMOVED.git-id  adresses-cadastre-39.geojson.gz.REMOVED.git-id  adresses-cadastre-40.geojson.gz.REMOVED.git-id  adresses-cadastre-41.geojson.gz.REMOVED.git-id  (+59 more)
benchmarks/: Cargo.toml
benchmarks/src/: france_arrondissements.rs  france_cadastre.rs  france_cadastre_addresses.rs  france_cadastre_parcelles.rs  france_canton.rs  france_cantons.rs  france_communes.rs  france_departements.rs  france_regions.rs  france_shops.rs  france_zones.rs  main.rs  paris_voies.rs
examples/display/: Cargo.toml
examples/display/src/: app.rs  lib.rs  main.rs  runner.rs  utils.rs
examples/display/src/plugins/: display_db_content.rs  extract_lat_lng.rs  insert_into_database.rs  items_inspector.rs  mod.rs  polygon_filtering.rs
src/: builder.rs  error.rs  geom.rs  keys.rs  lib.rs  reader.rs  roaring.rs  test.rs  zerometry.rs
src/metadata/: mod.rs
tests/: upgrade.rs
tests/assets/v0_2_0.mdb/: data.mdb
