[package]
name = "cellulite"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "benchmarks","examples/*"]

[workspace.dependencies]
geo = "0.30.0"
geojson = "0.24.2"
geo-types = "0.7.15"
h3o = { version = "0.8.0", features = ["geo"] }
heed = "0.22.0"
ordered-float = "5.0.0"
roaring = "0.11.1"
thiserror = "2.0.12"
steppe = "0.3.0"
# steppe = { path = "../steppe" }

[dependencies]
geo = { workspace = true }
geo-types = { workspace = true }
geojson = { workspace = true }
h3o = { workspace = true }
heed = { workspace = true }
ordered-float = { workspace = true }
roaring = { workspace = true }
thiserror = { workspace = true }
steppe = { workspace = true }

[dev-dependencies]
insta = "1.42.2"
tempfile = "3.19.1"
