[package]
name = "cellulite"
version = "0.1.1"
edition = "2024"
license-file = "LICENSE"
description = "Store and retrieve geojson in a memory mapped database"
documentation = "https://docs.rs/cellulite"
repository = "https://github.com/irevoire/cellulite"
authors = ["Tamo <tamo@meilisearch.com>"]
keywords = ["geo", "geography", "database"]

exclude = ["assets"]

[workspace]
members = [ "benchmarks","examples/*"]

[workspace.dependencies]
geo = "0.30.0"
geojson = "0.24.2"
geo-types = "0.7.15"
h3o = { version = "0.8.0", features = ["geo"] }
heed = "0.22.0"
ordered-float = "5.0.0"
roaring = "0.11.1"
thiserror = "2.0.12"
steppe = { version = "0.4.0", default-features = false }
# zerometry = { version = "0.1.0" }
# zerometry = { path = "../zerometry" }
zerometry = { git = "https://github.com/irevoire/zerometry", rev = "629745a6284c5e8bdd6f6dac5dce4f69fe32dd57" }

[dependencies]
geo = { workspace = true }
geo-types = { workspace = true }
geojson = { workspace = true }
h3o = { workspace = true }
heed = { workspace = true }
ordered-float = { workspace = true }
roaring = { workspace = true }
thiserror = { workspace = true }
steppe = { workspace = true }
zerometry = { workspace = true }
intmap = "3.1.2"
rayon = "1.10.0"
crossbeam = "0.8.4"
thread_local = "1.1.9"

[dev-dependencies]
insta = "1.42.2"
tempfile = "3.19.1"
