[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
cellulite = { path = ".." }
tempfile = "3.19.1"
heed = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
flate2 = "1.1.0"
geo = { workspace = true, features = ["proj", "use-proj"] }
geojson = { workspace = true }
steppe = { workspace = true, features = ["default-progress"] }
clap = { version = "4.5.36", features = ["derive"] }
fst = "0.4.7"
roaring.workspace = true
