[package]
name = "display"
version = "0.1.0"
authors = ["Tamo <irevoire@hotmail.fr>"]
edition = "2021"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]
rust-version = "1.85"

[dependencies]
cellulite = { path = "../.." }
env_logger = "0.11"
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
egui = "0.31"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tempfile = "3.19.1"
heed = "0.22.0"
h3o = { version = "0.7.1", features = ["geo"] }
walkers = "0.35.0"
geo-types = "0.7.15"
rand = "0.9.0"
synchronoise = "1.0.1"
roaring = "0.10.10"
geo = "0.29.3"
